@@ -59,13 +59,18 @@ y - 5/2)*x^3 + (-6*y - 29/2)*x^2 + (-23*y - 59/2)*x + (-36*y - 18), x - 2],
 [1/9*x^3 + 47/36*x^2 - 3695/432*x - 1464769/15552, -1/18*x^4 + (1/27*y - 3/2
 )*x^3 + (25/36*y - 3965/432)*x^2 + (10745/1296*y + 118411/7776)*x + (2098163
 /46656*y + 21431725/124416), x + 25/4]]], [1, 3, 3; 3, 1, 9; 3, 9, 1]]
-[[[Mod(-47*phi + 92/3, phi^2 - phi - 1), Mod(6911/12*phi - 87805/108, phi^2 
-- phi - 1)], [Mod(182073/28561*phi - 906448/85683, phi^2 - phi - 1), Mod(-18
-4316619/19307236*phi + 8024662187/521295372, phi^2 - phi - 1)]], [1, 13; 13,
- 1]]
-[[[Mod(105/16*phi - 15/16, phi^2 - phi - 1), Mod(35/4*phi + 35/32, phi^2 - p
-hi - 1)], [Mod(-51/80*phi - 27/80, phi^2 - phi - 1), Mod(-7/25*phi - 133/800
-, phi^2 - phi - 1)]], [1, 5; 5, 1]]
-[[[Mod(-315*phi + 45, phi^2 - phi - 1), Mod(-7560*phi - 945, phi^2 - phi - 1
-), Mod(85995*phi - 138510, phi^2 - phi - 1)]], Mat(1)]
-Total time spent: 1532
+[1, 13; 13, 1]
+[0, 0]
+[1, 2, 3, 6, 5, 10, 15, 30; 2, 1, 6, 3, 10, 5, 30, 15; 3, 6, 1, 2, 15, 30, 5
+, 10; 6, 3, 2, 1, 30, 15, 10, 5; 5, 10, 15, 30, 1, 2, 3, 6; 10, 5, 30, 15, 2
+, 1, 6, 3; 15, 30, 5, 10, 3, 6, 1, 2; 30, 15, 10, 5, 6, 3, 2, 1]
+[0, 0, 0, 0, 0, 0, 0, 0]
+[1, 2, 4, 4, 3, 3, 6, 6, 12, 12, 12, 12; 2, 1, 2, 2, 6, 6, 3, 3, 6, 6, 6, 6;
+ 4, 2, 1, 4, 12, 12, 6, 6, 3, 3, 12, 12; 4, 2, 4, 1, 12, 12, 6, 6, 12, 12, 3
+, 3; 3, 6, 12, 12, 1, 9, 2, 18, 4, 36, 36, 4; 3, 6, 12, 12, 9, 1, 18, 2, 36,
+ 4, 4, 36; 6, 3, 6, 6, 2, 18, 1, 9, 2, 18, 18, 2; 6, 3, 6, 6, 18, 2, 9, 1, 1
+8, 2, 2, 18; 12, 6, 3, 12, 4, 36, 2, 18, 1, 9, 36, 4; 12, 6, 3, 12, 36, 4, 1
+8, 2, 9, 1, 4, 36; 12, 6, 12, 3, 36, 4, 18, 2, 36, 4, 1, 9; 12, 6, 12, 3, 4,
+ 36, 2, 18, 4, 36, 9, 1]
+[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+Total time spent: 2640
