@@ -28,7 +28,12 @@ check([9938375/21952, 111284641/50625, -10218313/17576, -25/2]);
 ellisomat(ellinit([0,-1,1,-10,-20]))
 ellisomat(ellinit([1,0,1,4,-6]),2)
 ellisomat(ellinit([1,0,1,4,-6]),3)
+chk(E)=
+{
+  my([L,M]=ellisomat(E));print(M);apply(l->checkiso(E,ellinit(l[1]),l[2]),L);
+}
 nf=nfinit(phi^2-phi-1);
-ellisomat(ellinit([0,1,phi,-47*phi+31,560*phi-803],nf),13,1)
-ellisomat(ellinit([phi+1,1,phi+1,6*phi-1,13*phi+2],nf),5,1)
-ellisomat(ellinit([phi+1,1,phi+1,6*phi-1,13*phi+2],nf),17,1)
+chk(ellinit([0,1,phi,-47*phi+31,560*phi-803],nf))
+chk(ellinit([phi+1,1,phi+1,6*phi-1,13*phi+2],nf))
+nf=nfinit(a^2-2);
+chk(ellinit([a,-1,0,18,46],nf))
