@@ -247,6 +247,7 @@ JA   92- GP functions ecpp, ecppexport, ecppisvalid.
      94- [libpari] rootsof1q_cx, rootsof1powinit, rootsof1pow
 BA   95- [libpari] RgX_digits
      96- [libpari] Q_content_safe
+BA   97- ellisomat: support for curve over finite field without CM
 
   Changed
       1- rewrite bnfnarrow
